corrected caption visibility

--- a/main.css
+++ b/main.css
@@ -15,6 +15,10 @@ img {
   width: 500px;
 }
 
+.carousel-caption {
+  background-color: rgba(0, 0, 0, 0.509);
+  padding: 5px;
+}
 
 /* SUBSCRIPTION FORM */
 
